[project]
name = "variable-backward-slice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "angr==9.2.72",
    "tracer==0.1",
    "claripy==9.2.72",
    "setuptools>=68.2.2",
    "monkeyhex==1.7.4",
    "archinfo==9.2.72",
    "networkx==3.1",
    "lief",
    "cle==9.2.72",
    "pyelftools==0.30",
    "fidget==0.1.3",
    "pyvex==9.2.72",
    "psutil==5.9.5",
    "termcolor==2.3.0",
    "requests>=2.31.0",
    "argparse==1.4.0",
    "bingraphvis==0.4.0",
    "pydot==1.4.2",
    "Pygments==2.16.1",
    "PyYAML==6.0.1",
    "compilerex",
    "povsim",
    "patcherex",
    "angr-utils",
    "patched-lib-prepare",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.3",
    "cffi==1.17.1",
    "pycparser==2.22"
]

[tool.uv.sources]
angr-utils = {git = "https://github.com/axt/angr-utils.git", rev="7fd826a16b511727148f727150cea1d7ba6985f5"}
povsim = {git = "https://github.com/mechaphish/povsim.git"}
compilerex = {git ="https://github.com/mechaphish/compilerex.git", rev="6d49822696915b947278030d3f708e2c50078264"}
angr = { path = "angr" }
patcherex = { path = "patcherex" }
lief = { path = "LIEF/api/python" }
patched-lib-prepare = { path = "patched-lib-prepare" }


[tool.uv]
build-constraint-dependencies = ["setuptools<82"]